<resources>
    <string name="ERROR_PRINTER_0001">Please take out the printed photo.</string>
    <string name="ERROR_PRINTER_0100">0100: Cover open or ribbon missing, please close cover door or put in ribbon.</string>
    <string name="ERROR_PRINTER_0201">0201: Ribbon missing, please check the ribbon.</string>
    <string name="ERROR_PRINTER_0203">0203: Unsupported ribbon type, please check the ribbon.</string>
    <string name="ERROR_PRINTER_0300">0300: Ribbon empty, please change the ribbon.</string>
    <string name="ERROR_PRINTER_0301">0301: Ribbon error!Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0302">0302: Ribbon error!Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0400">0400: Make sure paper is loaded at correct position.</string>
    <string name="ERROR_PRINTER_0400_1">0400: Make sure paper is loaded at correct position.</string>
    <string name="ERROR_PRINTER_0401">0401: Paper out! Please Change a new paper roll.</string>
    <string name="ERROR_PRINTER_0500">0500: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0501">0501: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0502">0502: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0503">0503: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0504">0504: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0505">0505: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0506">0506: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0507">0507: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0508">0508: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0509">0509: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0510">0510: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0511">0511: Paper jam! Please refer to product\'s user manual to eliminate the problem.</string>
    <string name="ERROR_PRINTER_0600">0600: The type of paper does not match installed ribbon type</string>
    <string name="ERROR_PRINTER_1200">1200: ADC error. Please contact the distributor or dealer nearest to you for further assistance.</string>
    <string name="ERROR_PRINTER_1300">1300: Unable to update printer firmware, please retry the firmware update, or restart printer.</string>
    <string name="ERROR_PRINTER_1500">1500: Cutter Error. Please check if paper exit path is clogged up with paper scraps. If yes, please try to remove paper scraps and then re-print. If error continues, please contact the distributor or dealer nearest to you for further assistance.</string>
    <string name="PLEASE_CONNECT_NETWORK">Please check printer connection</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="action_settings">Settings</string>
    <string name="add_text">添加文本</string>
    <string name="ai_help">使用说明</string>
    <string name="ai_help_detail">1.本写真模板分为单人拍照模式和多人拍照模式，用户请按需选择相应的模板，请在付款前再次确认已选定的模板，付款后则不可更改； \n2.用户选定本产品写真模板后，其拍摄生成结果与用户所选定模板所示性别保持一致，服装、发型、姿势等风格一致；</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_name">双拍机</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="at_least_one">最低需打印一份</string>
    <string name="balance_value">余额：&lt;font color=#CC0000&gt;%1$s&lt;/font&gt;</string>
    <string name="bar_name_cpu" formatted="false">%1s  %2s</string>
    <string name="bar_phone">客服电话：%1s      </string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_collapse">Collapse the bottom sheet</string>
    <string name="bottomsheet_action_expand">Expand the bottom sheet</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="bottomsheet_drag_handle_clicked">Drag handle double-tapped</string>
    <string name="bottomsheet_drag_handle_content_description">Drag handle</string>
    <string name="brvah_load_complete">点击加载更多</string>
    <string name="brvah_load_end">没有更多数据</string>
    <string name="brvah_load_failed">加载失败，点击重试</string>
    <string name="brvah_loading">加载中...</string>
    <string name="camera_reconnecting">相机重连中…</string>
    <string name="camera_standard">水平拍摄</string>
    <string name="camera_top_view">俯视拍摄</string>
    <string name="cancel">取消</string>
    <string name="capture_error">拍照出错，请重拍</string>
    <string name="certify_loading">证件照生成中</string>
    <string name="change_pwd_ok">修改密码完成</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="checking_ai_fail">ai生成失败，请联系服务人员</string>
    <string name="checking_picture">检测图片中…</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="countdown_almost_over">倒计时即将结束，请尽快处理哦</string>
    <string name="cutout_photo">替换背景中…</string>
    <string name="descriptions">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="descriptions_p232">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="descriptions_p310w">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="descriptions_p520l">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="descriptions_p52n">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="descriptions_p750l">1.WiFi connection improved.\n2.Printing quality improved.</string>
    <string name="downing">下载中</string>
    <string name="downing_apk">下载apk中</string>
    <string name="downing_res">下载资源中，剩余（%1d）</string>
    <string name="effect">特效</string>
    <string name="effect_cat_ear">猫耳</string>
    <string name="effect_cute_dragon">可爱龙</string>
    <string name="effect_deer">鹿角</string>
    <string name="effect_lion_dance">舞狮</string>
    <string name="effect_pig_ear">猪耳朵</string>
    <string name="effect_rabbit">兔子</string>
    <string name="effect_santas">圣诞</string>
    <string name="enable_screen_lock">是否开启锁屏功能</string>
    <string name="enable_show_date">是否显示添加日期</string>
    <string name="error">发生错误，请联系维修人员</string>
    <string name="error_a11y_label">Error: invalid</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exiting">正在退出App</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="fab_transformation_scrim_behavior">com.google.android.material.transformation.FabTransformationScrimBehavior</string>
    <string name="fab_transformation_sheet_behavior">com.google.android.material.transformation.FabTransformationSheetBehavior</string>
    <string name="face_warp_2">哈哈镜1</string>
    <string name="face_warp_3">哈哈镜2</string>
    <string name="face_warp_4">哈哈镜3</string>
    <string name="face_warp_5">哈哈镜4</string>
    <string name="face_warp_6">哈哈镜5</string>
    <string name="file_not_exist">文件不存在</string>
    <string name="filter_anime1">动漫滤镜1</string>
    <string name="filter_anime2">动漫滤镜2</string>
    <string name="filter_anime_tips">动漫滤镜在确定后生成</string>
    <string name="filter_bailiang">海盐</string>
    <string name="filter_fennen">粉嫩</string>
    <string name="filter_fugu">胶片</string>
    <string name="filter_gexing">旧街</string>
    <string name="filter_gexing11">加州</string>
    <string name="filter_gexing3">美拉德</string>
    <string name="filter_heibai">黑白</string>
    <string name="filter_heibai2">默片</string>
    <string name="filter_heibai4">暗调</string>
    <string name="filter_lensediao">西柚</string>
    <string name="filter_mitao">蜜桃</string>
    <string name="filter_nuansediao">日杂</string>
    <string name="filter_qianbihua">素描</string>
    <string name="filter_shahua">沙画</string>
    <string name="filter_xiaoqingxin">ins风</string>
    <string name="filter_zhuihuigang">摩卡灰</string>
    <string name="filter_ziran">自然</string>
    <string name="frame_error">相框错误，请选择其它相框</string>
    <string name="generate_fail">生成失败，请稍候再试或联系客服</string>
    <string name="generating">正在生成，请稍等…</string>
    <string name="hello_world">Hello world!</string>
    <string name="hide_bottom_view_on_scroll_behavior">com.google.android.material.behavior.HideBottomViewOnScrollBehavior</string>
    <string name="hp_print_sdk_cancel_job">Cancel Job</string>
    <string name="hp_print_sdk_confirm">Confirm</string>
    <string name="hp_print_sdk_label_color">Color Mode</string>
    <string name="hp_print_sdk_label_copies">Copies</string>
    <string name="hp_print_sdk_label_copies_settings">Copies:</string>
    <string name="hp_print_sdk_label_default_options_display">None</string>
    <string name="hp_print_sdk_label_document">document</string>
    <string name="hp_print_sdk_label_dpi">DPI</string>
    <string name="hp_print_sdk_label_layout">Layout</string>
    <string name="hp_print_sdk_label_media_margin">Media Margin</string>
    <string name="input_pwd">请输入密码</string>
    <string name="input_text">输入文本</string>
    <string name="ok">确定</string>
    <string name="select_camera">请选择拍摄方式</string>
    <string name="text_color">字体颜色</string>
    <string name="text_size">字体大小</string>
</resources>