<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_bg_select_camera"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">
    <com.wugu.doublecamera.custom.BtnBackCountdown
        android:id="@+id/layout_btn_countdown"
        android:layout_width="@dimen/normal_170dp"
        android:layout_height="@dimen/normal_110dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_40sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_40dp"
        android:text="@string/select_camera"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_standard"
        android:layout_width="@dimen/normal_300dp"
        android:layout_height="@dimen/normal_300dp"
        android:layout_margin="@dimen/normal_20dp"
        android:src="@mipmap/standard"
        app:layout_constraintBottom_toTopOf="@+id/tv_standard"
        app:layout_constraintEnd_toStartOf="@+id/iv_top_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_btn_countdown"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_top_view"
        android:layout_width="@dimen/normal_300dp"
        android:layout_height="@dimen/normal_300dp"
        android:layout_margin="@dimen/normal_20dp"
        android:src="@mipmap/top_view"
        app:layout_constraintBottom_toTopOf="@+id/tv_top_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_standard"
        app:layout_constraintTop_toBottomOf="@+id/layout_btn_countdown"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_36sp"
        android:id="@+id/tv_standard"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_20dp"
        android:text="@string/camera_standard"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_standard"
        app:layout_constraintStart_toStartOf="@+id/iv_standard"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_36sp"
        android:id="@+id/tv_top_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_20dp"
        android:text="@string/camera_top_view"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/iv_top_view"
        app:layout_constraintStart_toStartOf="@+id/iv_top_view"/>
</androidx.constraintlayout.widget.ConstraintLayout>
