<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/shape_bg_select_camera"
    android:paddingBottom="@dimen/normal_30dp"
    android:layout_width="@dimen/normal_800dp"
    android:layout_height="wrap_content">
    <com.wugu.doublecamera.custom.BtnBackCountdown
        android:id="@+id/layout_btn_countdown"
        android:layout_width="@dimen/normal_160dp"
        android:layout_height="@dimen/normal_100dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_input"
        android:background="@drawable/shape_gray_r10"
        android:paddingLeft="@dimen/normal_20dp"
        android:paddingRight="@dimen/normal_20dp"
        android:layout_width="match_parent"
        android:layout_height="@dimen/normal_80dp"
        android:layout_marginLeft="@dimen/normal_30dp"
        android:layout_marginRight="@dimen/normal_30dp"
        android:hint="@string/input_text"
        android:layout_marginHorizontal="@dimen/normal_30dp"
        android:paddingHorizontal="@dimen/normal_20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_btn_countdown"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_32sp"
        android:id="@+id/tv_size"
        android:paddingLeft="@dimen/normal_30dp"
        android:paddingRight="@dimen/normal_30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_20dp"
        android:text="@string/text_size"
        android:paddingHorizontal="@dimen/normal_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_input"/>
    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/seekbar_font_size"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:max="20"
        android:progress="10"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_size"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_32sp"
        android:id="@+id/tv_color"
        android:paddingLeft="@dimen/normal_30dp"
        android:paddingRight="@dimen/normal_30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_20dp"
        android:text="@string/text_color"
        android:paddingHorizontal="@dimen/normal_30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seekbar_font_size"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_black"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        android:layout_marginTop="@dimen/normal_10dp"
        app:circleColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/view_white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_color"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_white"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/view_red"
        app:layout_constraintStart_toEndOf="@+id/view_black"
        app:layout_constraintTop_toTopOf="@+id/view_black"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_red"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/sign_red"
        app:layout_constraintEnd_toStartOf="@+id/view_blue"
        app:layout_constraintStart_toEndOf="@+id/view_white"
        app:layout_constraintTop_toTopOf="@+id/view_black"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_blue"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/sign_blue"
        app:layout_constraintEnd_toStartOf="@+id/view_yellow"
        app:layout_constraintStart_toEndOf="@+id/view_red"
        app:layout_constraintTop_toTopOf="@+id/view_red"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_yellow"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/sign_yellow"
        app:layout_constraintEnd_toStartOf="@+id/view_green"
        app:layout_constraintStart_toEndOf="@+id/view_blue"
        app:layout_constraintTop_toTopOf="@+id/view_red"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_green"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/sign_green"
        app:layout_constraintEnd_toStartOf="@+id/view_purple"
        app:layout_constraintStart_toEndOf="@+id/view_yellow"
        app:layout_constraintTop_toTopOf="@+id/view_red"/>
    <com.wugu.doublecamera.custom.CircleView
        android:id="@+id/view_purple"
        android:padding="@dimen/sign_color_padding"
        android:layout_width="@dimen/sign_color_size"
        android:layout_height="@dimen/sign_color_size"
        app:circleColor="@color/sign_purple"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/view_green"
        app:layout_constraintTop_toTopOf="@+id/view_red"/>
    <androidx.appcompat.widget.AppCompatTextView
        android:textSize="@dimen/normal_32sp"
        android:textColor="#ff428e"
        android:id="@+id/tv_ok"
        android:padding="@dimen/normal_20dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_30dp"
        android:text="@string/ok"
        android:layout_marginEnd="@dimen/normal_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view_purple"/>
</androidx.constraintlayout.widget.ConstraintLayout>
