<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/btn_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_30dp"
        android:scaleType="centerInside"
        android:layout_marginEnd="@dimen/normal_30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <RadioGroup
        android:id="@+id/rg_server"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/normal_30dp"
        app:layout_constraintBottom_toTopOf="@+id/tv_version"
        app:layout_constraintStart_toStartOf="parent">
        <RadioButton
            android:textSize="@dimen/normal_32sp"
            android:id="@+id/rbtn_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="默认服务器"/>
        <RadioButton
            android:textSize="@dimen/normal_32sp"
            android:id="@+id/rbtn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="测试服务器"/>
        <RadioButton
            android:textSize="@dimen/normal_32sp"
            android:id="@+id/rbtn_local"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="国内服务器"/>
        <RadioButton
            android:textSize="@dimen/normal_32sp"
            android:id="@+id/rbtn_foreign"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="国外服务器"/>
    </RadioGroup>
    <View
        android:id="@+id/v_check"
        android:visibility="gone"
        android:layout_width="300px"
        android:layout_height="300px"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <com.wugu.doublecamera.custom.StrokeTextView
        android:textSize="@dimen/normal_86sp"
        android:textColor="@color/countdown_color"
        android:id="@+id/tv_countdown"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.6"
        android:layout_marginEnd="@dimen/normal_10dp"
        android:letterSpacing="0.03"
        app:layout_constraintBottom_toBottomOf="@+id/btn_back"
        app:layout_constraintEnd_toStartOf="@+id/btn_back"
        app:layout_constraintTop_toTopOf="@+id/btn_back"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/normal_3dp"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_input"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="et_input_code, layout_num_keyboard"/>
    <androidx.constraintlayout.widget.Group
        android:id="@+id/group_item"
        android:visibility="gone"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:constraint_referenced_ids="tv_version, iv_exit, iv_power_off, iv_reboot, iv_change_pwd"/>
    <com.wugu.doublecamera.custom.StrokeTextView
        android:textSize="@dimen/normal_26sp"
        android:id="@+id/tv_version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_60dp"
        android:layout_marginStart="@dimen/normal_30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:strokeColor="@color/white"
        app:strokeWidth="@dimen/normal_3dp"/>
    <androidx.appcompat.widget.AppCompatEditText
        android:textSize="@dimen/normal_34sp"
        android:textColor="@color/black"
        android:gravity="center"
        android:id="@+id/et_input_code"
        android:background="@drawable/shape_et_input"
        android:paddingTop="@dimen/normal_10dp"
        android:paddingBottom="@dimen/normal_10dp"
        android:focusable="false"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/normal_5dp"
        android:layout_marginRight="@dimen/normal_5dp"
        android:layout_marginBottom="@dimen/normal_10dp"
        android:hint="@string/input_pwd"
        android:maxLength="12"
        android:layout_marginHorizontal="@dimen/normal_5dp"
        android:paddingVertical="@dimen/normal_10dp"
        app:layout_constraintBottom_toTopOf="@+id/layout_num_keyboard"
        app:layout_constraintEnd_toEndOf="@+id/layout_num_keyboard"
        app:layout_constraintStart_toStartOf="@+id/layout_num_keyboard"/>
    <com.wugu.doublecamera.custom.NumKeyboard
        android:id="@+id/layout_num_keyboard"
        android:layout_width="300px"
        android:layout_height="320px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/normal_50dp"
        android:scaleType="centerInside"
        android:minWidth="@dimen/normal_100dp"
        android:minHeight="@dimen/normal_100dp"
        android:layout_marginEnd="@dimen/normal_80dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/iv_power_off"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_power_off"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:minWidth="@dimen/normal_100dp"
        android:minHeight="@dimen/normal_100dp"
        android:drawableTop="@drawable/ic_power_off"
        android:layout_marginEnd="@dimen/normal_80dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_reboot"
        app:layout_constraintStart_toEndOf="@+id/iv_exit"
        app:layout_constraintTop_toTopOf="@+id/iv_exit"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_reboot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:minWidth="@dimen/normal_100dp"
        android:minHeight="@dimen/normal_100dp"
        android:drawableTop="@drawable/ic_reboot"
        android:layout_marginEnd="@dimen/normal_80dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_change_pwd"
        app:layout_constraintStart_toEndOf="@+id/iv_power_off"
        app:layout_constraintTop_toTopOf="@+id/iv_exit"/>
    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_change_pwd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scaleType="centerInside"
        android:minWidth="@dimen/normal_100dp"
        android:minHeight="@dimen/normal_100dp"
        android:drawableTop="@drawable/ic_change_pwd"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/iv_reboot"
        app:layout_constraintTop_toTopOf="@+id/iv_exit"/>
    <CheckBox
        android:textSize="@dimen/normal_32sp"
        android:id="@+id/cb_lock_screen"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_80dp"
        android:text="@string/enable_screen_lock"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <CheckBox
        android:textSize="@dimen/normal_32sp"
        android:id="@+id/cb_pe_show_date"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_50dp"
        android:text="@string/enable_show_date"
        app:layout_constraintStart_toStartOf="@+id/cb_lock_screen"
        app:layout_constraintTop_toBottomOf="@+id/cb_lock_screen"/>
    <CheckBox
        android:textSize="@dimen/normal_32sp"
        android:id="@+id/cb_use_outside"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/normal_130dp"
        android:text="Use outside http"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/bar_blur"
        android:visibility="gone"
        android:layout_width="@dimen/normal_200dp"
        android:layout_height="@dimen/normal_60dp"
        android:layout_marginTop="@dimen/normal_30dp"
        android:max="60"
        android:progress="0"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
    <androidx.appcompat.widget.AppCompatSeekBar
        android:id="@+id/bar_white"
        android:visibility="gone"
        android:layout_width="@dimen/normal_200dp"
        android:layout_height="@dimen/normal_60dp"
        android:layout_marginTop="@dimen/normal_50dp"
        android:max="10"
        android:progress="0"
        android:secondaryProgress="10"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>
